--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <section class="container">
-      <header>
-        <img src="./images/logo.svg" alt="Huddle Logo" />
-      </header>
+    <header class="container">
+      <img src="./images/logo.svg" alt="Huddle Logo" />
+    </header>
 
+    <section class="flex">
       <img
         class="illustration"
         src="./images/illustration-mockups.svg"
@@ -42,15 +42,15 @@
 
         <a href="#" target="_blank">Register</a>
       </div>
+    </section>
 
+    <footer class="container">
       <div class="social-media-links">
         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
-    </section>
 
-    <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
